oxiplate/tests/crates/template-dir-missing/tests/broken/broken.stderr
error: Template directory `$DIR/missing-dir` not found.
 --> tests/broken/broken.rs:4:1
  |
4 | #[oxiplate = "external.html.oxip"]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
